--- a/friends.html
+++ b/friends.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>wöndèlånd chat</title>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.com/npm/sweetalert2@11"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     /* 🔒 Prevent ALL text selection */
@@ -76,40 +76,6 @@
       flex: 1;
       overflow-y: auto;
       padding: 8px 0;
-    }
-
-    /* === Beautiful Loading Skeleton === */
-    .skeleton-loader {
-      padding: 12px 16px;
-      display: flex;
-      align-items: flex-start;
-      background: white;
-      border-bottom: 1px solid #f0f0f0;
-    }
-    .skeleton-avatar {
-      width: 48px;
-      height: 48px;
-      border-radius: 50%;
-      background: linear-gradient(90deg, #f0f0f0 25%, #e0e0e0 50%, #f0f0f0 75%);
-      animation: shimmer 1.5s infinite;
-      margin-right: 12px;
-    }
-    .skeleton-info {
-      flex: 1;
-    }
-    .skeleton-line {
-      height: 14px;
-      background: linear-gradient(90deg, #f0f0f0 25%, #e0e0e0 50%, #f0f0f0 75%);
-      animation: shimmer 1.5s infinite;
-      border-radius: 4px;
-      margin-bottom: 8px;
-    }
-    .skeleton-line.short {
-      width: 60%;
-    }
-    @keyframes shimmer {
-      0% { background-position: -1000px 0; }
-      100% { background-position: 1000px 0; }
     }
 
     .friend-item {
@@ -189,6 +155,22 @@
       flex-shrink: 0;
     }
 
+    /* Numbered unread badge */
+    .unread-badge {
+      position: absolute;
+      bottom: -8px;
+      left: 60px;
+      background: #e50914;
+      color: white;
+      font-size: 10px;
+      padding: 2px 6px;
+      border-radius: 10px;
+      font-weight: bold;
+      min-width: 16px;
+      text-align: center;
+      display: none;
+    }
+
     /* Floating AI Button */
     #aiFloatingBtn {
       position: fixed;
@@ -217,6 +199,14 @@
       from { transform: rotate(0deg); }
       to   { transform: rotate(360deg); }
     }
+
+    #friendsList:empty::before {
+      content: "Loading chats...";
+      display: block;
+      text-align: center;
+      padding: 30px;
+      color: #999;
+    }
   </style>
 </head>
 <body>
@@ -232,9 +222,7 @@
   </header>
 
   <div class="friends-list" id="friendsList">
-    <!-- Loading skeletons -->
-    <div class="skeleton-loader"><div class="skeleton-avatar"></div><div class="skeleton-info"><div class="skeleton-line"></div><div class="skeleton-line short"></div></div></div>
-    <div class="skeleton-loader"><div class="skeleton-avatar"></div><div class="skeleton-info"><div class="skeleton-line"></div><div class="skeleton-line short"></div></div></div>
+    <!-- Chats rendered here -->
   </div>
 
   <div id="aiFloatingBtn">
@@ -255,7 +243,7 @@
       onSnapshot,
       query,
       orderBy,
-      updateDoc
+      where
     } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
     const firebaseConfig = {
@@ -338,6 +326,12 @@
       const seenClass = chat.isSentByMe && chat.seen ? 'red' : '';
       const seenIcon = chat.isSentByMe ? `<span class="seen-indicator ${seenClass}">✓✓</span>` : '';
 
+      let badgeHTML = '';
+      if (chat.isAdmin && chat.unreadCount > 0) {
+        const displayCount = chat.unreadCount > 99 ? '99+' : chat.unreadCount;
+        badgeHTML = `<div class="unread-badge">${displayCount}</div>`;
+      }
+
       item.innerHTML = `
         <div class="avatar">${getInitials(chat.name)}</div>
         <div class="friend-info">
@@ -348,6 +342,7 @@
           </div>
         </div>
         ${timeStr ? `<div class="timestamp">${timeStr}</div>` : ''}
+        ${badgeHTML}
       `;
 
       item.addEventListener('click', () => {
@@ -362,15 +357,18 @@
       activeMessageListeners.clear();
     }
 
-    function listenToMessages(chatId, uid, chatEmail, chatName) {
+    function listenToMessages(chatId, uid, isAdmin, isSelf, email) {
       if (activeMessageListeners.has(chatId)) return;
 
-      const q = query(collection(db, 'chats', chatId, 'messages'), orderBy('timestamp', 'desc'));
+      const msgRef = collection(db, 'chats', chatId, 'messages');
+      const q = query(msgRef, orderBy('timestamp', 'desc'));
+
       const unsubscribe = onSnapshot(q, (snapshot) => {
         let lastMessage = '';
         let lastTimestamp = null;
         let isSentByMe = false;
         let seen = false;
+        let unreadCount = 0;
 
         if (!snapshot.empty) {
           const last = snapshot.docs[0].data();
@@ -379,13 +377,12 @@
           isSentByMe = last.senderUid === uid;
           seen = last.seen || false;
 
-          // Auto-mark as seen if incoming and not seen
-          if (!isSentByMe && !seen) {
-            updateDoc(doc(db, 'chats', chatId, 'messages', snapshot.docs[0].id), {
-              seen: true,
-              seenAt: serverTimestamp()
-            }).catch(console.error);
-          }
+          snapshot.docs.forEach(doc => {
+            const msg = doc.data();
+            if (msg.senderUid !== uid && !msg.seen) {
+              unreadCount++;
+            }
+          });
         }
 
         const item = document.querySelector(`.friend-item[data-chat-id="${chatId}"]`);
@@ -393,6 +390,7 @@
           const lastMsgEl = item.querySelector('.last-message');
           const timestampEl = item.querySelector('.timestamp');
           const seenIndicator = item.querySelector('.seen-indicator');
+          const badgeEl = item.querySelector('.unread-badge');
 
           if (lastMsgEl) lastMsgEl.textContent = lastMessage || 'Tap to chat';
           if (timestampEl) {
@@ -400,23 +398,28 @@
               ? lastTimestamp.toDate().toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' })
               : '';
           }
+
           if (seenIndicator) {
             seenIndicator.className = `seen-indicator ${isSentByMe && seen ? 'red' : ''}`;
           }
-        } else {
-          // Re-render if missing (e.g., new chat)
-          const placeholderChat = {
-            id: chatId,
-            name: chatName,
-            email: chatEmail,
-            lastMessage,
-            lastTimestamp,
-            isSentByMe,
-            seen
-          };
-          const container = document.getElementById('friendsList');
-          container.appendChild(renderFriendItem(placeholderChat));
+
+          if (isAdmin && unreadCount > 0) {
+            const displayCount = unreadCount > 99 ? '99+' : unreadCount;
+            if (badgeEl) {
+              badgeEl.textContent = displayCount;
+              badgeEl.style.display = 'block';
+            } else {
+              const badge = document.createElement('div');
+              badge.className = 'unread-badge';
+              badge.textContent = displayCount;
+              item.appendChild(badge);
+            }
+          } else {
+            if (badgeEl) badgeEl.style.display = 'none';
+          }
         }
+      }, (error) => {
+        console.warn("Message listener error:", error);
       });
 
       activeMessageListeners.set(chatId, unsubscribe);
@@ -426,79 +429,91 @@
       const container = document.getElementById('friendsList');
       const uid = user.uid;
 
-      cleanupListeners();
-
-      // Show loading skeletons
-      container.innerHTML = `
-        <div class="skeleton-loader"><div class="skeleton-avatar"></div><div class="skeleton-info"><div class="skeleton-line"></div><div class="skeleton-line short"></div></div></div>
-        <div class="skeleton-loader"><div class="skeleton-avatar"></div><div class="skeleton-info"><div class="skeleton-line"></div><div class="skeleton-line short"></div></div></div>
-      `;
-
-      const chatsQuery = query(collection(db, 'chats'));
-      const chatSnapshot = await getDocs(chatsQuery);
-      const userDocs = await getDocs(collection(db, 'users'));
-
-      const chatList = [];
-      for (const docSnap of chatSnapshot.docs) {
-        const chatData = docSnap.data();
-        if (!chatData.participants || !chatData.participants.includes(uid)) continue;
-
-        let name = 'Unknown', email = '', isSelf = false, isAdmin = false;
-
-        if (chatData.self) {
-          name = 'Saved Messages';
-          email = user.email;
-          isSelf = true;
-        } else if (chatData.type === 'admin') {
-          name = ADMIN_DISPLAY_NAME;
-          email = ADMIN_EMAIL;
-          isAdmin = true;
-        } else {
-          const otherUid = chatData.participants.find(id => id !== uid);
-          if (otherUid) {
-            let found = null;
-            userDocs.forEach(u => {
-              if (u.data().uid === otherUid) found = u.data();
-            });
-            if (found) {
-              name = found.username || found.email.split('@')[0];
-              email = found.email;
-            } else {
-              name = 'User';
-              email = 'unknown';
-            }
-          }
+      // Show loading
+      Swal.fire({
+        title: 'Loading chats...',
+        allowOutsideClick: false,
+        allowEscapeKey: false,
+        didOpen: () => Swal.showLoading(),
+        customClass: {
+          popup: 'swal2-border-red'
         }
-
-        chatList.push({ 
-          id: docSnap.id, 
-          name, 
-          email, 
-          isSelf, 
-          isAdmin 
-        });
-      }
-
-      chatList.sort((a, b) => {
-        if (a.isSelf) return -1;
-        if (b.isSelf) return 1;
-        if (a.isAdmin) return -1;
-        if (b.isAdmin) return 1;
-        return 0;
       });
 
-      // Render actual chats
-      container.innerHTML = '';
-      chatList.forEach(chat => {
-        const placeholderChat = {
-          ...chat,
-          lastMessage: '',
-          lastTimestamp: null,
-          isSentByMe: false,
-          seen: false
-        };
-        container.appendChild(renderFriendItem(placeholderChat));
-        listenToMessages(chat.id, uid, chat.email, chat.name);
+      cleanupListeners();
+
+      const chatsQuery = query(collection(db, 'chats'));
+      const unsubscribe = onSnapshot(chatsQuery, async (snapshot) => {
+        const chatList = [];
+        const userDocs = await getDocs(collection(db, 'users'));
+
+        for (const docSnap of snapshot.docs) {
+          const chatData = docSnap.data();
+          if (!chatData.participants || !chatData.participants.includes(uid)) continue;
+
+          let name = 'Unknown', email = '', isSelf = false, isAdmin = false;
+
+          if (chatData.self) {
+            name = 'Saved Messages';
+            email = user.email;
+            isSelf = true;
+          } else if (chatData.type === 'admin') {
+            name = ADMIN_DISPLAY_NAME;
+            email = ADMIN_EMAIL;
+            isAdmin = true;
+          } else {
+            const otherUid = chatData.participants.find(id => id !== uid);
+            if (otherUid) {
+              let found = null;
+              userDocs.forEach(u => {
+                if (u.data().uid === otherUid) found = u.data();
+              });
+              if (found) {
+                name = found.username || found.email.split('@')[0];
+                email = found.email;
+              } else {
+                name = 'User';
+                email = 'unknown';
+              }
+            }
+          }
+
+          chatList.push({ 
+            id: docSnap.id, 
+            name, 
+            email, 
+            isSelf, 
+            isAdmin 
+          });
+        }
+
+        chatList.sort((a, b) => {
+          if (a.isSelf) return -1;
+          if (b.isSelf) return 1;
+          if (a.isAdmin) return -1;
+          if (b.isAdmin) return 1;
+          return 0;
+        });
+
+        container.innerHTML = '';
+        chatList.forEach(chat => {
+          const placeholderChat = {
+            ...chat,
+            lastMessage: '',
+            lastTimestamp: null,
+            isSentByMe: false,
+            seen: false,
+            unreadCount: 0
+          };
+          container.appendChild(renderFriendItem(placeholderChat));
+          listenToMessages(chat.id, uid, chat.isAdmin, chat.isSelf, chat.email);
+        });
+
+        // Close loading
+        Swal.close();
+      }, (error) => {
+        Swal.close();
+        Swal.fire('Error', 'Failed to load chats.', 'error');
       });
     }
 
